--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "redux-logger": "^3.0.6",
